--- a/estilos.css
+++ b/estilos.css
@@ -5,6 +5,7 @@ body { line-height: 1.6; color: #333;background-color: #f8f9fa;}
 .navbar {display: flex;justify-content: space-between; align-items: center;}
 .logo{display: flex; align-items: left; text-decoration: none;font-size: 1.5rem; font-weight: bold; color: #2ecc71;}
 .logo i {font-size: 24px; color: white; transition: color 0.3s ease;}
+.logo i:hover{color:#4CAF50; transform: scale(1.2);}
 .nav-links { display: flex; list-style: none;  gap: 15px;}
 .nav-links li a { text-decoration: none; color: white; font-size: 18px; transition: color 0.3s ease;}
 .nav-links li a:hover {color: #f1c40f;}
@@ -36,20 +37,20 @@ body { line-height: 1.6; color: #333;background-color: #f8f9fa;}
 .social-links li a:hover{ color: #1abc9c;}
 @media (max-width: 480px) {
     .header {background-color: #e74c3c;border-radius: 0; }
-    .logo i {color: yellow;font-size: 30px;  }
+    .logo i {color: #ff5722;font-size: 18px;  }
     .nav-links {flex-direction: column; align-items: center; gap: 10px;}
     .btn-consulta {background-color: #c0392b;}
     .btn-consulta:hover { background-color: #e74c3c;transform: scale(1.2);}
 }
 @media (min-width: 481px) and (max-width: 768px) {
     .header { background-color: #3498db;  border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);}
-    .logo i { font-size: 26px; color: white;}
+    .logo i { font-size: 22px; color: #2196F3;}
     .btn-consulta { background-color: #2980b9;}
     .btn-consulta:hover { background-color: #3498db;}
 }
 @media (min-width: 769px) {
     .header { background-color: #2ecc71;border-radius: 10px;}
-    .logo i {color: white;}
+    .logo i {color: #333; font-size: 28px;}
     .btn-consulta { background-color: #27ae60;  }
     .btn-consulta:hover {
         transform: scale(1.1);}
