--- a/estilos.css
+++ b/estilos.css
@@ -9,12 +9,12 @@ body { line-height: 1.6; color: #333;background-color: #f8f9fa;}
 .nav-links { display: flex; list-style: none;  gap: 15px;}
 .nav-links li a { text-decoration: none; color: white; font-size: 18px; transition: color 0.3s ease;}
 .nav-links li a:hover {color: #f1c40f;}
-.btn-consulta { background-color: #c0392b; }
-.btn-consulta:hover {background-color: #e74c3c;transform: scale(1.2);}
-.hero { display: flex; align-items: center; justify-content: space-between; padding: 6rem 0;  background-color: #eafaf1;}
-.hero-content { max-width: 50%;}
-.hero-content h1 { font-size: 2.5rem; color: #333; }
-.hero-content p { margin: 1rem 0; font-size: 1.2rem; color: #666;}
+.btn-consulta { background-color: #00c58b;color: white; padding: 10px 20px; border: none; border-radius: 5px; font-size: 1rem; font-weight: bold;cursor: pointer;transition: all 0.3s ease;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);}
+.btn-consulta:hover {background-color: #019d6b;}
+.hero { display: flex; align-items: center; justify-content: center; min-height: 100vh;  background-color: #eafaf1; padding: 0 20px; box-sizing: border-box;}
+.hero-content { max-width: 1200px; text-align: center;}
+.hero-content h1 { font-size: 2.5rem; color: #333; margin-bottom: 1rem;}
+.hero-content p {  font-size: 1.2rem; margin-bottom: 1.5rem;color: #555;}
 .btn-comprar {padding: 0.8rem 1.5rem; background-color: #1abc9c; color: white;  border: none;  border-radius: 5px;  font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;}
 .btn-comprar:hover {background-color: #16a085;}
 .hero-image img {max-width: 100%;border-radius: 10px;}
