--- a/estilos.css
+++ b/estilos.css
@@ -58,6 +58,9 @@ form input, form select, form textarea {width: 100%;padding: 10px; margin-bottom
 .btn-primary:hover {background-color: #019d6b;}
 .consulta-container { text-align: center;max-width: 800px;margin: 50px auto; padding: 20px;}
 .consulta-container h1 {font-size: 2rem;font-weight: bold; margin-bottom: 10px;}
+.dark-mode {background-color: #121212;color: white;}
+.dark-mode .header, .dark-mode .footer { background-color: #1e1e1e;}
+.dark-mode a {color: #00c58b;}
 @media (max-width: 480px) {
     .header {background-color: #e74c3c;border-radius: 0; }
     .logo i {color: #ff5722;font-size: 18px;  }
