--- a/estilos.css
+++ b/estilos.css
@@ -2,11 +2,12 @@
 body { line-height: 1.6; color: #333;background-color: #f8f9fa;}
 .container {width: 90%;max-width: 1200px;margin: 0 auto;}
 .header {  animation: slideIn 1s ease-in-out;background-color: #2ecc71; padding: 10px 20px;transition: all 0.3s ease;  border-radius: 10px;}
-.navbar {display: flex;justify-content: space-between; align-items: center;}
+.navbar {display: flex;justify-content: space-between; align-items: center; flex-wrap: wrap;}
 .logo{display: flex; align-items: left; text-decoration: none;font-size: 1.5rem; font-weight: bold; color: #2ecc71;}
 .logo i {font-size: 24px; color: white; transition: color 0.3s ease;}
+.logo a {color: white;font-size: 24px;margin-right: 20px;}
 .logo i:hover{color:#4CAF50; transform: scale(1.2);}
-.nav-links { display: flex; list-style: none;  gap: 15px;}
+.nav-links { display: flex; list-style: none;  gap: 20px;}
 .nav-links li a { text-decoration: none; color: white; font-size: 18px; transition: color 0.3s ease;}
 .nav-links li a:hover {color: #f1c40f;}
 .btn-consulta { background-color: #00c58b;color: white; padding: 10px 20px; border: none; border-radius: 5px; font-size: 1rem; font-weight: bold;cursor: pointer;transition: all 0.3s ease;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);}
@@ -61,10 +62,13 @@ form input, form select, form textarea {width: 100%;padding: 10px; margin-bottom
 .dark-mode {background-color: #121212;color: white;}
 .dark-mode .header, .dark-mode .footer { background-color: #1e1e1e;}
 .dark-mode a {color: #00c58b;}
+.btn-consulta, #toggle-theme { margin-left: 10px; padding: 5px 10px; border: none; border-radius: 5px;cursor: pointer;background-color: #2980b9;color: white;}
 @media (max-width: 480px) {
     .header {background-color: #e74c3c;border-radius: 0; }
     .logo i {color: #ff5722;font-size: 18px;  }
-    .nav-links {flex-direction: column; align-items: center; gap: 10px;}
+    .nav-links {flex-direction: column; align-items: center; gap: 5px;}
+    .navbar {flex-direction: column;align-items: center;}
+    .btn-consulta, #toggle-theme {width: 100%;margin-top: 10px;}
     .btn-consulta {background-color: #c0392b;}
     .btn-consulta:hover { background-color: #e74c3c;transform: scale(1.2);}
     .footer { background-color: #444; padding: 30px 10px;}
@@ -81,6 +85,7 @@ form input, form select, form textarea {width: 100%;padding: 10px; margin-bottom
     .logo i { font-size: 22px; color: #2196F3;}
     .btn-consulta { background-color: #2980b9;}
     .btn-consulta:hover { background-color: #3498db;}
+    .nav-links { flex-wrap: wrap; justify-content: center;gap: 10px;}
     .footer { background-color: #222; padding: 40px 20px;}
     .footer .footer-content { flex-direction: row; justify-content: space-around;}
     .footer .social-links { gap: 20px; }
