--- a/estilos.css
+++ b/estilos.css
@@ -62,7 +62,12 @@ form input, form select, form textarea {width: 100%;padding: 10px; margin-bottom
 .dark-mode {background-color: #121212;color: white;}
 .dark-mode .header, .dark-mode .footer { background-color: #1e1e1e;}
 .dark-mode a {color: #00c58b;}
+#rss-feed ul { list-style: none; padding: 0;}
+#rss-feed li { padding: 5px 0; border-bottom: 1px solid #ddd;}
+#rss-feed a {  text-decoration: none;  color: #007bff;  font-weight: bold;}
+#rss-feed a:hover { color: #0056b3;}
 .btn-consulta, #toggle-theme { margin-left: 10px; padding: 5px 10px; border: none; border-radius: 5px;cursor: pointer;background-color: #2980b9;color: white;}
+#rss-feed {margin-top: 20px;}
 @media (max-width: 480px) {
     .header {background-color: #e74c3c;border-radius: 0; }
     .logo i {color: #ff5722;font-size: 18px;  }
